Alignment Fixes

--- a/sass/partials/_toast.scss
+++ b/sass/partials/_toast.scss
@@ -11,8 +11,9 @@
     padding: 16px;
     position: fixed;
     z-index: 100;
-    // left: 50%;
+    left: 50%;
     top: 5%;
+    transform: translateX(-50%);
   }
   
   /* Show the toast when clicking on a button (class added with JavaScript) */
